add mureka api, move llm client to separate package, fix rpc cxalls

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "check-types": "tsc --noEmit",
-    "test": "vitest",
+    "test": "vitest --run",
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@repo/ai-client": "workspace:*",
     "@repo/config": "workspace:*",
     "@repo/db": "workspace:*",
     "@trpc/server": "^11.4.3",
