backend sorta working just with openai

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,8 +18,11 @@
     "@repo/ai-client": "workspace:*",
     "@repo/config": "workspace:*",
     "@repo/db": "workspace:*",
+    "@repo/lyrics": "workspace:*",
+    "@repo/mureka": "workspace:*",
     "@trpc/server": "^11.4.3",
     "compression": "^1.7.5",
+    "dotenv": "^16.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
