--- a/packages/lyrics/package.json
+++ b/packages/lyrics/package.json
@@ -2,8 +2,8 @@
   "name": "@repo/lyrics",
   "version": "0.1.0",
   "description": "OpenAI-powered lyrics generation and enhancement",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.mts",
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
@@ -14,8 +14,8 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
     }
   },
   "files": [
