--- a/packages/ai-client/package.json
+++ b/packages/ai-client/package.json
@@ -16,7 +16,9 @@
     "clean": "rm -rf dist",
     "test": "vitest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@repo/types": "workspace:*"
+  },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.10.2",
