--- a/turbo.json
+++ b/turbo.json
@@ -31,18 +31,15 @@
     },
     "db:generate": {
       "inputs": ["src/schema.ts", "drizzle.config.ts"],
-      "outputs": ["drizzle/**"],
-      "env": ["DATABASE_URL"]
+      "outputs": ["drizzle/**"]
     },
     "db:migrate": {
       "dependsOn": ["db:generate"],
-      "cache": false,
-      "env": ["DATABASE_URL"]
+      "cache": false
     },
     "db:studio": {
       "cache": false,
-      "persistent": true,
-      "env": ["DATABASE_URL"]
+      "persistent": true
     },
     "dev": {
       "cache": false,
